--- a/MyInventory/MyInventory/Views/Product/Delete.cshtml
+++ b/MyInventory/MyInventory/Views/Product/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Product
 
 @{
-    ViewData["Title"] = "Edit - Product";
+    ViewData["Title"] = "Delete - Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="card text-white">
-    <div class="card-header bg-primary">Edit Product</div>
+    <div class="card-header bg-primary">Remove Product</div>
     <div class="card-body text-dark">
         <div class="">
             <form id="departmentCreateForm" method="post">
@@ -16,7 +16,7 @@
                         <label asp-for="Name"></label>
                     </div>
                     <div class="col-8">
-                        <input type="text" id="Name" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Name"/>
+                        <input readonly type="text" id="Name" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Name"/>
                     </div>
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
@@ -25,7 +25,7 @@
                         <label asp-for="Description"></label>
                     </div>
                     <div class="col-8">
-                        <input type="text" id="Description" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Description"/>
+                        <input readonly type="text" id="Description" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Description"/>
                     </div>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
@@ -34,7 +34,7 @@
                         <label asp-for="Price"></label>
                     </div>
                     <div class="col-8">
-                        <input type="text" id="Price" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Price"/>
+                        <input readonly type="text" id="Price" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Price"/>
                     </div>
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
@@ -43,12 +43,12 @@
                         <label asp-for="Image"></label>
                     </div>
                     <div class="col-8">
-                        <input type="text" id="Image" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Image"/>
+                        <input readonly type="text" id="Image" required class="form-control mt-2" placeholder="Enter new department name" asp-for="Image"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4 offset-2 text-primary">
-                        <button type="submit" class="btn btn-info form-control mt-2"><i class="far fa-save"></i> &nbsp; Update</button>
+                        <button type="submit" class="btn btn-info form-control mt-2"><i class="fas fa-trash-alt"></i> &nbsp; Delete</button>
                     </div>
                     <div class="col-4">
                         <a class="btn btn-dark text-white form-control mt-2" asp-controller="Product" asp-action="Index"><i class="fas fa-arrow-left"></i> &nbsp; Back To List</a>
