Order Model, DbSet, Migration, Product_Order ViewModel Added

--- a/MyInventory/MyInventory/Views/Product/Details.cshtml
+++ b/MyInventory/MyInventory/Views/Product/Details.cshtml
@@ -9,7 +9,7 @@
     <h5 class="card-title">@Model.Name</h5>
     <p class="card-text">@Model.Description</p>
     <p class="card-text">@Model.Price</p>
-    <input type="text" class="form-control" asp-for="Count" />
+    @*<input type="text" class="form-control" asp-for="Count" />*@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
