--- a/MyInventory/MyInventory/Views/Product/Details.cshtml
+++ b/MyInventory/MyInventory/Views/Product/Details.cshtml
@@ -2,26 +2,24 @@
 
 @model OrderProductViewModel
 @{
-    ViewData["Title"] = "Details Product";
+    ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">@Model.Product.Name</h5>
-    <p class="card-text">@Model.Product.Description</p>
-    <p class="card-text">@Model.Product.Price</p>
-    <div class="row">
-        <div class="col-2 mt-2">
-            <label>Quantity</label>
-        </div>
-        <div >
-            <input type="number" class="form-control mt-2" asp-for="@Model.Order.Count" />
-        </div>
-         
-    </div>
+  <div  class="card-body">
+        <h5 class="card-title">@Model.Product.Name</h5>
+        <p class="card-text">@Model.Product.Description</p>
+        <p  class="card-text">@Model.Product.Price</p>
+      <form   method="post" asp-controller="Product" asp-action="Details">
     
-    <a href="#" class="btn btn-primary mt-2">Place Order</a>
+        <input  type="text" class="form-control mt-2" asp-for="@Model.Order.Name" />
+        <input  type="text" class="form-control mt-2" asp-for="@Model.Order.Description" />
+        <input  type="text"  class="form-control mt-2" asp-for="@Model.Order.Price" />
+        <input type="number" class="form-control mt-2" asp-for="@Model.Order.Count" />
+        <button class="btn btn-primary text-white form-control mt-2" type="submit"><i class="fas fa-plus"></i> &nbsp; Place Order</button>
+   
+      </form>
+    
   </div>
 </div>
-
